...
            }
        }

        fun getDisplayName(soundType: String): String {
            return when (soundType) {
                SOUND_TYPE_SUBUH -> "Subuh - Ust. Ruhani"
                SOUND_TYPE_OMAR_HISHAM -> "Omar Hisham Al Arabi"
                SOUND_TYPE_MAGHRIB_MTA -> "Maghrib - MTA"
                SOUND_TYPE_SILENT -> "Silent"
                else -> "Omar Hisham Al Arabi"
            }
        }
    }
...
